--- a/index.html
+++ b/index.html
@@ -2,11 +2,156 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="styles.css">
     <title>HTML Academy: Седона</title>
   </head>
+
   <body>
+    <header class="page-header">
+      <nav class="navigation">
+        <a href="#" class="navigation-logo">
+          <img src="#" alt="Логотип Седона" class="header-logo-sedona">
+        </a>
+        <ul class="navigation-list">
+          <li class="navigation-item">
+            <a href="index.html" class="navigation-link navigation-link-current">Главная</a>
+          </li>
+          <li class="navigation-item">
+            <a href="#" class="navigation-link">О Седоне</a>
+          </li>
+          <li class="navigation-item">
+            <a href="catalog.html" class="navigation-link">Гостиницы</a>
+          </li>
+        </ul>
+        <ul class="navigation-list navigation-user">
+          <li class="navigation-item">
+            <a href="#" class="navigation-link">
+              <span class="visually-hidden">Поиск</span>
+              <!-- <svg/img?> -->
+            </a>
+          </li>
+          <li class="navigation-item">
+            <a href="#" class="navigation-link">
+              <span class="visually-hidden">Избранное</span>
+              <!-- <svg/img?> -->
+            </a>
+          </li>
+          <li class="navigation-item">
+            <a href="#" class="button button-navigation">ХОЧУ СЮДА!</a>
+          </li>
+        </ul>
+      </nav>
+    </header>
 
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS. Профессиональная вёрстка сайтов</a>».</p>
+    <main class="main-index">
+      <section class="main-intro">
+        <h1 class="visually-hidden">Добро пожаловать в Седону</h1>
+        <img src="#" alt="welcome to the gorgeous Sedona" class="welcome-image">
+        <h2 class="intro-title">Седона — небольшой городок в Аризоне,
+        заслуживающий большего!</h2>
+        <p>Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
+      </section>
+      <section class="reasons">
+        <h2 class="visually-hidden">Причины</h2>
+        <ul class="reasons-list">
+          <li class="reasons-item">
+            <h3 class="reasons-title">Настоящий городок</h3>
+            <p>———</p>
+            <p class="reasons-description">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
+          </li>
+          <li class="reasons-item reasons-image">
+            <img src="#" alt="Настоящий городок">
+          </li>
+          <li class="reasons-item">
+            <h3 class="reasons-title">Небольшая площадь</h3>
+            <p>———</p>
+            <p class="reasons-description">Все достопримечательности находятся очень близко</p>
+          </li>
+          <li class="reasons-item">
+            <h3 class="reasons-title">Красивая дорога</h3>
+            <p>———</p>
+            <p class="reasons-description">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+          </li>
+          <li class="reasons-item">
+            <h3 class="reasons-title">Мало туристов</h3>
+            <p>———</p>
+            <p class="reasons-description">Большинство едет в Гранд Каньон и толпится там</p>
+          </li>
+          <li class="reasons-item reasons-image">
+            <img src="#" alt="Мост дьявола">
+          </li>
+          <li class="reasons-item">
+            <h3 class="reasons-title">Там есть мост дьявола</h3>
+            <p>———</p>
+            <p class="reasons-description">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
+          </li>
+          <li class="reasons-item">
+            <h3 class="reasons-title">Жильё</h3>
+            <p class="reasons-description">Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
+          </li>
+          <li class="reasons-item">
+            <h3 class="reasons-title">Еда</h3>
+            <p class="reasons-description">Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!</p>
+          </li>
+          <li class="reasons-item">
+            <h3 class="reasons-title">Сувениры</h3>
+            <p class="reasons-description">Не только китайского, но и настоящего местного производства!</p>
+          </li>
+        </ul>
+      </section>
+      <section class="interested">
+        <h2 class="interested-title">Заинтересовались?</h2>
+        <p>Укажите предполагаемые даты поездки,и мы покажем вам лучшие предложения гостиниц в Седоне</p>
+        <a href="catalog.html" class="button button-search">ПОИСК ГОСТИНИЦЫ В СЕДОНЕ</a>
+      </section>
+      <section class="subscribe">
+        <h2 class="subscribe-title">Подпишитесь на рассылку</h2>
+        <p>Только полезная информация и никакого спама, честное бойскаутское!</p>
+        <form class="subscribe-form" action="https://echo.htmlacademy.ru/" method="post">
+          <label class="visually-hidden">Email</label>
+          <input class="email-field" placeholder="Ваш e-mail" type="email" name="subscribe-email" id="subscribe-email">
+          <button class="subscribe-button" type="submit">
+            <span>Подписаться</span>
+          </button>
+        </form>
+      </section>
+    </main>
 
+    <footer class="page-footer">
+      <section class="footer-socials">
+        <h2 class="visually-hidden">Социальные сети</h2>
+        <ul class="footer-social-list">
+          <li class="footer-social-item">
+            <a href="https://vk.com/htmlacademy" class="button-socials">
+              <span class="visually-hidden">Vkontakte</span>
+              <!-- <svg/img?> -->
+            </a>
+          </li>
+          <li class="footer-social-item">
+            <a href="https://t.me/htmlacademy " class="button-socials">
+              <span class="visually-hidden">Telegram</span>
+              <!-- <svg/img?> -->
+            </a>
+          </li>
+          <li class="footer-social-item">
+            <a href="https://www.youtube.com/user/htmlacademyru" class="button-socials">
+              <span class="visually-hidden">YouTube</span>
+              <!-- <svg/img?> -->
+            </a>
+          </li>
+        </ul>
+      </section>
+      <section class="footer-phone">
+        <h2 class="visually-hidden">Контактный номер</h2>
+        <a href="tel:+78128121212" class="phone">+7 (812) 812-12-12</a>
+      </section>
+      <section class="footer-about-text">
+        <h2 class="visually-hidden">Сделано в HTML Academy</h2>
+          <a href="https://htmlacademy.ru/">
+            <img src="#" alt="Логотип HTML Academy" class="footer-HTML-logo">
+          </a>
+      </section>
+    </footer>
   </body>
 </html>
