--- a/catalog.html
+++ b/catalog.html
@@ -45,7 +45,8 @@
     </header>
 
     <main class="main-inner">
-      <!-- Для второго хедера и 1 секции один бекграунд? или их нужно обединить в 1 секцию?-->
+      <!-- HEADER -->
+      <!-- QUESTION: Для второго хедера и 1 секции один бекграунд? или их нужно обединить в 1 секцию?-->
       <header class="inner-header">
         <h1 class="inner-header-title">Гостиницы Седоны</h1>
         <ul class="breadcrumbs">
@@ -61,10 +62,11 @@
         </ul>
       </header>
 
+      <!-- CATALOG FILTER -->
       <section class="catalog-hotels">
         <h2 class="visually-hidden">Список гостиниц с фильтрами</h2>
         <form class="catalog-filter" action="https://echo.htmlacademy.ru/" method="get">
-
+          <!-- FIELD Инфраструктура checkbox -->
           <fieldset class="catalog-filter-group">
             <legend class="catalog-filter-title">Инфраструктура:</legend>
             <ul class="catalog-filter-list">
@@ -88,7 +90,7 @@
               </li>
             </ul>
           </fieldset>
-
+          <!-- FIELD Тип жилья radio -->
           <fieldset class="catalog-filter-group">
             <legend class="catalog-filter-title">Тип жилья:</legend>
             <ul class="catalog-filter-list">
@@ -112,10 +114,10 @@
               </li>
             </ul>
           </fieldset>
-
+          <!-- FIELD Стоимость scale/range -->
           <fieldset class="catalog-filter-group">
             <legend class="catalog-filter-title">Стоимость, ₽:</legend>
-             <!-- placeholder и value вместе не отображаются?? исп-ть надпись? -->
+             <!--QUESTION: placeholder и value вместе не отображаются?? исп-ть надпись? -->
             <label class="control">
              <input type="text" placeholder="от" value="0" class="catalog-filter-scale">
               от
@@ -133,6 +135,7 @@
         </form>
       </section>
 
+      <!-- SEARCH RESULTS -->
       <section class="search-results">
         <div class="search-results-header">
           <h2>Найдено гостиниц: 38</h2>
@@ -153,7 +156,7 @@
             <span class="visually-hidden">Показать список</span>
           </a>
         </div>
-
+        <!-- SEARCH RESULTS- HOTELS CARDS -->
         <ul class="search-results-hotels-card">
           <li class="hotels-card">
             <a href="#" class="hotels-card-link">
@@ -164,7 +167,7 @@
             <span class="hotels-card-price">От 4000 ₽</span>
             <a href="#" class="hotels-card-button button-more">подробнее</a>
             <button class="hotels-card-button button-favorite">в избранное</button>
-            <!-- Raiting?? через img или подключить через css что-то подобное? https://www.w3schools.com/howto/howto_css_star_rating.asp   -->
+            <!--QUESTION: Raiting - через img или подключить через css что-то подобное? https://www.w3schools.com/howto/howto_css_star_rating.asp   -->
             <div>
               <img src="#" alt="Кол-во звезд у гостиницы" class="hotels-card-stars">
             </div>
@@ -178,7 +181,7 @@
             <span class="hotels-card-group">Гостиница</span>
             <span class="hotels-card-price">От 5000 ₽</span>
             <a href="#" class="hotels-card-button button-more">подробнее</a>
-            <button class="hotels-card-button button-favorite button-favorite-activated">в избранном</button>
+            <button class="hotels-card-button button-favorite button-favorite-active">в избранном</button>
             <!-- Raiting??  -->
             <div>
               <img src="#" alt="Кол-во звезд у гостиницы" class="hotels-card-stars">
@@ -216,7 +219,7 @@
             <span class="hotels-card-raiting">Рейтинг: 5,0</span>
           </li>
         </ul>
-
+        <!-- PAGINATION -->
         <ul class="pagination">
           <li class="pagination-item">
             <a href="#" class="pagination-link pagination-current">1</a>
