--- a/index.html
+++ b/index.html
@@ -48,16 +48,15 @@
       <section class="main-intro">
         <h1 class="visually-hidden">Добро пожаловать в Седону</h1>
         <img src="#" alt="welcome to the gorgeous Sedona" class="welcome-image">
-        <h2 class="intro-title">Седона — небольшой городок в Аризоне,
-        заслуживающий большего!</h2>
-        <p>Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
       </section>
       <section class="reasons">
+        <h2 class="intro-title">Седона — небольшой городок в Аризоне,
+          заслуживающий большего!</h2>
+          <p>Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
         <h2 class="visually-hidden">Причины</h2>
         <ul class="reasons-list">
           <li class="reasons-item">
             <h3 class="reasons-title">Настоящий городок</h3>
-            <p>———</p>
             <p class="reasons-description">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
           </li>
           <li class="reasons-item reasons-image">
@@ -65,17 +64,14 @@
           </li>
           <li class="reasons-item">
             <h3 class="reasons-title">Небольшая площадь</h3>
-            <p>———</p>
             <p class="reasons-description">Все достопримечательности находятся очень близко</p>
           </li>
           <li class="reasons-item">
             <h3 class="reasons-title">Красивая дорога</h3>
-            <p>———</p>
             <p class="reasons-description">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
           </li>
           <li class="reasons-item">
             <h3 class="reasons-title">Мало туристов</h3>
-            <p>———</p>
             <p class="reasons-description">Большинство едет в Гранд Каньон и толпится там</p>
           </li>
           <li class="reasons-item reasons-image">
@@ -83,7 +79,6 @@
           </li>
           <li class="reasons-item">
             <h3 class="reasons-title">Там есть мост дьявола</h3>
-            <p>———</p>
             <p class="reasons-description">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
           </li>
           <li class="reasons-item">
@@ -111,9 +106,7 @@
         <form class="subscribe-form" action="https://echo.htmlacademy.ru/" method="post">
           <label class="visually-hidden">Email</label>
           <input class="email-field" placeholder="Ваш e-mail" type="email" name="subscribe-email" id="subscribe-email">
-          <button class="subscribe-button" type="submit">
-            <span>Подписаться</span>
-          </button>
+          <button class="subscribe-button" type="submit">Подписаться</button>
         </form>
       </section>
     </main>
