Исправляет все указанные наставником ошибки

--- a/catalog.html
+++ b/catalog.html
@@ -161,7 +161,7 @@
               <span class="hotels-card-price">От 4000 ₽</span>
               <a href="#" class="hotels-card-button button-more">подробнее</a>
               <button class="hotels-card-button button-favorite">в избранное</button>
-              <!--QUESTION: Raiting - через img или подключить через css что-то подобное? https://www.w3schools.com/howto/howto_css_star_rating.asp   -->
+              <!-- Raiting -->
               <div>
                 <img src="#" alt="Кол-во звезд у гостиницы" class="hotels-card-stars">
               </div>
@@ -176,7 +176,7 @@
               <span class="hotels-card-price">От 5000 ₽</span>
               <a href="#" class="hotels-card-button button-more">подробнее</a>
               <button class="hotels-card-button button-favorite button-favorite-active">в избранном</button>
-              <!-- Raiting??  -->
+              <!-- Raiting -->
               <div>
                 <img src="#" alt="Кол-во звезд у гостиницы" class="hotels-card-stars">
               </div>
@@ -191,7 +191,7 @@
               <span class="hotels-card-price">От 2500 ₽</span>
               <a href="#" class="hotels-card-button button-more">подробнее</a>
               <button class="hotels-card-button button-favorite">в избранное</button>
-              <!-- Raiting??  -->
+              <!-- Raiting -->
               <div>
                 <img src="#" alt="Кол-во звезд у гостиницы" class="hotels-card-stars">
               </div>
@@ -206,7 +206,7 @@
               <span class="hotels-card-price">От 1500 ₽</span>
               <a href="#" class="hotels-card-button button-more">подробнее</a>
               <button class="hotels-card-button button-favorite">в избранное</button>
-              <!-- Raiting??  -->
+              <!-- Raiting -->
               <div>
                 <img src="#" alt="Кол-во звезд у гостиницы" class="hotels-card-stars">
               </div>
