--- a/catalog.html
+++ b/catalog.html
@@ -141,10 +141,10 @@
               <option value="popular">Сначала популярные</option>
             </select>
             <a href="#" class="button button-light">
-              <span class="visually-hidden">Показать карточки</span>
+              <span class="visually-hidden">Показать таблицу</span>
             </a>
             <a href="#" class="button button-light">
-              <span class="visually-hidden">Показать по одной на странице</span>
+              <span class="visually-hidden">Показать слайдшоу</span>
             </a>
             <a href="#" class="button button-light">
               <span class="visually-hidden">Показать список</span>
