--- a/catalog.html
+++ b/catalog.html
@@ -11,31 +11,31 @@
     <div class="container">
       <header class="page-header">
         <nav class="navigation">
-          <a href="index.html" class="navigation-logo">
-            <img src="#" alt="Логотип Седона" class="header-logo-sedona">
+          <a href="#" class="navigation-logo">
+            <img src="images/header/logo-city-sedona.svg" alt="Логотип Седона" class="header-logo-sedona" width="138" height="64">
           </a>
           <ul class="navigation-list">
             <li class="navigation-item">
-              <a href="index.html" class="navigation-link">Главная</a>
+              <a href="index.html" class="navigation-link navigation-link-current">Главная</a>
             </li>
             <li class="navigation-item">
               <a href="#" class="navigation-link">О Седоне</a>
             </li>
             <li class="navigation-item">
-              <a href="catalog.html" class="navigation-link navigation-link-current">Гостиницы</a>
+              <a href="catalog.html" class="navigation-link">Гостиницы</a>
             </li>
           </ul>
           <ul class="navigation-list navigation-user">
             <li class="navigation-item">
               <a href="#" class="navigation-link">
                 <span class="visually-hidden">Поиск</span>
-                <!-- <svg/img?> -->
+                <img src="images/header/icon-search.svg" alt="Поиск" class="header-icon" width="20" height="20">
               </a>
             </li>
             <li class="navigation-item">
               <a href="#" class="navigation-link">
                 <span class="visually-hidden">Избранное</span>
-                <!-- <svg/img?> -->
+                <img src="images/header/icon-heart.svg" alt="Избранное" class="header-icon" width="20" height="20">
               </a>
             </li>
             <li class="navigation-item">
@@ -52,8 +52,11 @@
             <li class="breadcrumbs-item">
               <a href="index.html" class="breadcrumbs-link">
                 <span class="visually-hidden">Главная</span>
-                <!-- <svg/img home page?> -->
+                <img src="images/icon-home.svg" alt="Главная" class="main-icon-home" width="12" height="12">
               </a>
+            </li>
+            <li class="breadcrumbs-item">
+                <img src="images/icon-breadcrumbs-arrow.svg" alt="Далее" class="main-icon-home" width="6.39" height="9.94">
             </li>
             <li class="breadcrumbs-item">
               <a class="breadcrumbs-link">Гостиницы</a>
@@ -142,73 +145,72 @@
             </select>
             <a href="#" class="button button-light">
               <span class="visually-hidden">Показать таблицу</span>
+              <img src="images/icon-view-cards.svg" alt="Показать таблицу" class="button-icon-view" width="16" height="14">
             </a>
             <a href="#" class="button button-light">
               <span class="visually-hidden">Показать слайдшоу</span>
+              <img src="images/icon-view-one.svg" alt="Показать слайдшоу" class="button-icon-view" width="16" height="14">
             </a>
             <a href="#" class="button button-light">
               <span class="visually-hidden">Показать список</span>
+              <img src="images/icon-view-list.svg" alt="Показать список" class="button-icon-view" width="16" height="14">
             </a>
           </div>
           <!-- SEARCH RESULTS- HOTELS CARDS -->
           <ul class="search-results-hotels-card">
             <li class="hotels-card">
               <a href="#" class="hotels-card-link">
-                <img src="#" alt="Amara Resort & Spa" class="hotels-card-image">
+                <img src="images/hotels-raiting/hotel-1.jpg" alt="Amara Resort & Spa" class="hotels-card-image" width="300" height="212">
                 <h3 class="hotels-card-title">Amara Resort & Spa</h3>
               </a>
               <span class="hotels-card-group">Гостиница</span>
               <span class="hotels-card-price">От 4000 ₽</span>
               <a href="#" class="hotels-card-button button-more">подробнее</a>
               <button class="hotels-card-button button-favorite">в избранное</button>
-              <!-- Raiting -->
               <div>
-                <img src="#" alt="Кол-во звезд у гостиницы" class="hotels-card-stars">
+                <img src="images/hotels-raiting/star-4.svg" alt="Кол-во звезд у гостиницы 4" class="hotels-card-stars" width="140" height="37">
               </div>
               <span class="hotels-card-raiting">Рейтинг: 8,5</span>
             </li>
             <li class="hotels-card">
               <a href="#" class="hotels-card-link">
-                <img src="#" alt="Villas at Poco Diablo" class="hotels-card-image">
+                <img src="images/hotels-raiting/hotel-2.jpg" alt="Villas at Poco Diablo" class="hotels-card-image" width="300" height="212">
                 <h3 class="hotels-card-title">Villas at Poco Diablo</h3>
               </a>
               <span class="hotels-card-group">Гостиница</span>
               <span class="hotels-card-price">От 5000 ₽</span>
               <a href="#" class="hotels-card-button button-more">подробнее</a>
               <button class="hotels-card-button button-favorite button-favorite-active">в избранном</button>
-              <!-- Raiting -->
               <div>
-                <img src="#" alt="Кол-во звезд у гостиницы" class="hotels-card-stars">
+                <img src="images/hotels-raiting/star-4.svg" alt="Кол-во звезд у гостиницы 4" class="hotels-card-stars" width="140" height="37">
               </div>
               <span class="hotels-card-raiting">Рейтинг: 9,2</span>
             </li>
             <li class="hotels-card">
               <a href="#" class="hotels-card-link">
-                <img src="#" alt="Desert Quail Inn" class="hotels-card-image">
+                <img src="images/hotels-raiting/hotel-3.jpg" alt="Desert Quail Inn" class="hotels-card-image" width="300" height="212">
                 <h3 class="hotels-card-title">Desert Quail Inn</h3>
               </a>
               <span class="hotels-card-group">Гостиница</span>
               <span class="hotels-card-price">От 2500 ₽</span>
               <a href="#" class="hotels-card-button button-more">подробнее</a>
               <button class="hotels-card-button button-favorite">в избранное</button>
-              <!-- Raiting -->
               <div>
-                <img src="#" alt="Кол-во звезд у гостиницы" class="hotels-card-stars">
+                <img src="images/hotels-raiting/star-3.svg" alt="Кол-во звезд у гостиницы 3" class="hotels-card-stars" width="140" height="37">
               </div>
               <span class="hotels-card-raiting">Рейтинг: 6,9</span>
             </li>
             <li class="hotels-card">
               <a href="#" class="hotels-card-link">
-                <img src="#" alt="GreenTree Inn" class="hotels-card-image">
+                <img src="images/hotels-raiting/hotel-4.jpg" alt="GreenTree Inn" class="hotels-card-image" width="300" height="212">
                 <h3 class="hotels-card-title">GreenTree Inn</h3>
               </a>
               <span class="hotels-card-group">Гостиница</span>
               <span class="hotels-card-price">От 1500 ₽</span>
               <a href="#" class="hotels-card-button button-more">подробнее</a>
               <button class="hotels-card-button button-favorite">в избранное</button>
-              <!-- Raiting -->
               <div>
-                <img src="#" alt="Кол-во звезд у гостиницы" class="hotels-card-stars">
+                <img src="images/hotels-raiting/star-2.svg" alt="Кол-во звезд у гостиницы 2" class="hotels-card-stars" width="140" height="37">
               </div>
               <span class="hotels-card-raiting">Рейтинг: 5,0</span>
             </li>
@@ -254,19 +256,19 @@
             <li class="footer-social-item">
               <a href="https://vk.com/htmlacademy" class="button-socials">
                 <span class="visually-hidden">Vkontakte</span>
-                <!-- <svg/img?> -->
+                <img src="images/footer/social-vk.svg" alt="Vkontakte" class="footer-icon" width="24" height="14">
               </a>
             </li>
             <li class="footer-social-item">
               <a href="https://t.me/htmlacademy " class="button-socials">
                 <span class="visually-hidden">Telegram</span>
-                <!-- <svg/img?> -->
+                <img src="images/footer/social-tg.svg" alt="Telegram" class="footer-icon" width="18" height="16">
               </a>
             </li>
             <li class="footer-social-item">
               <a href="https://www.youtube.com/user/htmlacademyru" class="button-socials">
                 <span class="visually-hidden">YouTube</span>
-                <!-- <svg/img?> -->
+                <img src="images/footer/social-yt.svg" alt="YouTube" class="footer-icon" width="22" height="17">
               </a>
             </li>
           </ul>
@@ -278,7 +280,7 @@
         <section class="footer-about-text">
           <h2 class="visually-hidden">Сделано в HTML Academy</h2>
             <a href="https://htmlacademy.ru/">
-              <img src="#" alt="Логотип HTML Academy" class="footer-HTML-logo">
+              <img src="images/footer/logo-htmlacademy.svg" alt="Логотип HTML Academy" class="footer-HTML-logo" width="115" height="33">
             </a>
         </section>
       </footer>
