--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <header class="page-header">
         <nav class="navigation">
           <a href="#" class="navigation-logo">
-            <img src="#" alt="Логотип Седона" class="header-logo-sedona">
+            <img src="images/header/logo-city-sedona.svg" alt="Логотип Седона" class="header-logo-sedona" width="138" height="64">
           </a>
           <ul class="navigation-list">
             <li class="navigation-item">
@@ -29,13 +29,13 @@
             <li class="navigation-item">
               <a href="#" class="navigation-link">
                 <span class="visually-hidden">Поиск</span>
-                <!-- <svg/img?> -->
+                <img src="images/header/icon-search.svg" alt="Поиск" class="header-icon" width="20" height="20">
               </a>
             </li>
             <li class="navigation-item">
               <a href="#" class="navigation-link">
                 <span class="visually-hidden">Избранное</span>
-                <!-- <svg/img?> -->
+                <img src="images/header/icon-heart.svg" alt="Избранное" class="header-icon" width="20" height="20">
               </a>
             </li>
             <li class="navigation-item">
@@ -48,7 +48,8 @@
       <main class="main-index">
         <section class="main-intro">
           <h1 class="visually-hidden">Добро пожаловать в Седону</h1>
-          <img src="#" alt="welcome to the gorgeous Sedona" class="welcome-image">
+          <img src="images/welcome-title.svg" alt="welcome to the gorgeous Sedona" class="welcome-title" width="458" height="352">
+          <img src="images/welcome-divider.svg" alt="welcome to the gorgeous Sedona" class="welcome-divider" width="1200" height="57">
         </section>
         <section class="reasons">
           <h2 class="intro-title">Седона — небольшой городок в Аризоне,
@@ -61,7 +62,7 @@
               <p class="reasons-description">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
             </li>
             <li class="reasons-item reasons-image">
-              <img src="#" alt="Настоящий городок">
+              <img src="images/reason/reason-1.jpg" alt="Настоящий городок" class="reason-img" width="800" height="384">
             </li>
             <li class="reasons-item">
               <h3 class="reasons-title">Небольшая площадь</h3>
@@ -76,7 +77,7 @@
               <p class="reasons-description">Большинство едет в Гранд Каньон и толпится там</p>
             </li>
             <li class="reasons-item reasons-image">
-              <img src="#" alt="Мост дьявола">
+              <img src="images/reason/reason-2.jpg" alt="Мост дьявола" class="reason-img" width="800" height="384">
             </li>
             <li class="reasons-item">
               <h3 class="reasons-title">Там есть мост дьявола</h3>
@@ -85,14 +86,17 @@
           </ul>
           <ul>
             <li class="reasons-item">
+              <img src="images/reason/reason-icon-home.svg" alt="Жильё" class="reason-icon" width="75" height="72">
               <h3 class="reasons-title">Жильё</h3>
               <p class="reasons-description">Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
             </li>
             <li class="reasons-item">
+              <img src="images/reason/reason-icon-food.svg" alt="Еда" class="reason-icon" width="75" height="72">
               <h3 class="reasons-title">Еда</h3>
               <p class="reasons-description">Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!</p>
             </li>
             <li class="reasons-item">
+              <img src="images/reason/reason-icon-gift.svg" alt="Сувениры" class="reason-icon" width="75" height="72">
               <h3 class="reasons-title">Сувениры</h3>
               <p class="reasons-description">Не только китайского, но и настоящего местного производства!</p>
             </li>
@@ -121,19 +125,19 @@
             <li class="footer-social-item">
               <a href="https://vk.com/htmlacademy" class="button-socials">
                 <span class="visually-hidden">Vkontakte</span>
-                <!-- <svg/img?> -->
+                <img src="images/footer/social-vk.svg" alt="Vkontakte" class="footer-icon" width="24" height="14">
               </a>
             </li>
             <li class="footer-social-item">
               <a href="https://t.me/htmlacademy " class="button-socials">
                 <span class="visually-hidden">Telegram</span>
-                <!-- <svg/img?> -->
+                <img src="images/footer/social-tg.svg" alt="Telegram" class="footer-icon" width="18" height="16">
               </a>
             </li>
             <li class="footer-social-item">
               <a href="https://www.youtube.com/user/htmlacademyru" class="button-socials">
                 <span class="visually-hidden">YouTube</span>
-                <!-- <svg/img?> -->
+                <img src="images/footer/social-yt.svg" alt="YouTube" class="footer-icon" width="22" height="17">
               </a>
             </li>
           </ul>
@@ -145,7 +149,7 @@
         <section class="footer-about-text">
           <h2 class="visually-hidden">Сделано в HTML Academy</h2>
             <a href="https://htmlacademy.ru/">
-              <img src="#" alt="Логотип HTML Academy" class="footer-HTML-logo">
+              <img src="images/footer/logo-htmlacademy.svg" alt="Логотип HTML Academy" class="footer-HTML-logo" width="115" height="33">
             </a>
         </section>
       </footer>
