--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
               <a href="#" class="navigation-link">
                 <span class="visually-hidden">Избранное</span>
                 <img src="images/header/icon-heart.svg" alt="Избранное" class="header-icon" width="20" height="20">
+                <span class="header-icon-number">12</span>
               </a>
             </li>
             <li class="navigation-item">
@@ -49,7 +50,6 @@
         <section class="main-intro">
           <h1 class="visually-hidden">Добро пожаловать в Седону</h1>
           <img src="images/welcome-title.svg" alt="welcome to the gorgeous Sedona" class="welcome-title" width="458" height="352">
-          <img src="images/welcome-divider.svg" alt="welcome to the gorgeous Sedona" class="welcome-divider" width="1200" height="57">
         </section>
         <section class="reasons">
           <h2 class="intro-title">Седона — небольшой городок в Аризоне,
