--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>HTML Academy: Седона</title>
     <link rel="stylesheet" href="styles/styles.css">
+    <title>HTML Academy: Седона - Главная</title>
   </head>
 
   <body>
     <div class="container">
       <header class="page-header">
         <nav class="navigation">
-          <a href="#" class="navigation-logo">
+          <a href="index.html" class="navigation-logo">
             <img src="images/header/logo-city-sedona.svg" alt="Логотип Седона" class="header-logo-sedona" width="138" height="64">
           </a>
           <ul class="navigation-list">
