--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <header class="page-header">
         <nav class="navigation">
           <a href="index.html" class="navigation-logo">
-            <img src="images/header/logo-city-sedona.svg" alt="Логотип Седона" class="header-logo-sedona" width="138" height="64">
+            <img src="images/header/logo-city-sedona.svg" alt="Логотип Седона" class="header-logo-sedona" width="140" height="70">
           </a>
           <ul class="navigation-list">
             <li class="navigation-item">
@@ -26,17 +26,17 @@
               <a href="catalog.html" class="navigation-link">Гостиницы</a>
             </li>
           </ul>
-          <ul class="navigation-list navigation-user">
-            <li class="navigation-item">
-              <a href="#" class="navigation-link">
+          <ul class="navigation-list-user">
+            <li class="navigation-item-user">
+              <a href="#" class="navigation-link-user">
                 <span class="visually-hidden">Поиск</span>
                 <svg width="19" height="19" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <path d="m18.5 17-3.7-3.67c1-1.3 1.7-2.98 1.7-4.87A8 8 0 0 0 8.5.5C4.1.5.5 4.18.5 8.56a8 8 0 0 0 12.9 6.26l3.7 3.68 1.4-1.5Zm-10-2.48a6 6 0 0 1-6-5.96 6 6 0 0 1 12 0 6 6 0 0 1-6 5.96Z" fill="#000"/>
                 </svg>
               </a>
             </li>
-            <li class="navigation-item">
-              <a href="#" class="navigation-link">
+            <li class="navigation-item-user">
+              <a href="#" class="navigation-link-user">
                 <span class="visually-hidden">Избранное</span>
                 <svg width="20" height="20" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <path d="M9.9 19a.9.9 0 0 1-.8-.4c-5.4-6.1-6.7-7.5-7-7.9A5.4 5.4 0 0 1 6.5 2C7.8 2 9 2.5 10 3.3a5.46 5.46 0 0 1 9 4.1c0 1.3-.5 2.5-1.3 3.4l-7 7.9c-.2.2-.4.3-.8.3Zm-6-9.5c.3.4 3.5 4 6.1 6.9l6.2-7c.5-.5.7-1.2.7-2 0-1.8-1.5-3.3-3.3-3.3-1 0-2 .5-2.7 1.3-.3.3-.6.4-.9.4-.3 0-.6-.2-.8-.4-.7-.8-1.7-1.3-2.7-1.3-1.8 0-3.3 1.5-3.3 3.3-.1.9.3 1.6.7 2.1-.1 0-.1 0 0 0Z" fill="#000"/>
@@ -44,7 +44,7 @@
                 <span class="header-icon-number">12</span>
               </a>
             </li>
-            <li class="navigation-item">
+            <li class="navigation-item-user">
               <a href="#" class="button button-small button-navigation">Хочу сюда!</a>
             </li>
           </ul>
@@ -58,64 +58,65 @@
             <img src="images/welcome-title.svg" alt="welcome to the gorgeous Sedona" class="logo-welcome-title" width="458" height="352">
           </section>
           <section class="reasons">
-            <h2 class="intro-title">Седона — небольшой городок в Аризоне,
-              заслуживающий большего!</h2>
-              <p>Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
+            <h2 class="intro-title">Седона — небольшой городок в Аризоне,<br>заслуживающий большего!</h2>
+              <p class="intro-description">Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
             <h2 class="visually-hidden">Причины</h2>
             <ul class="reasons-list">
               <li class="reasons-item bg-basic">
-                <h3 class="reasons-title white">Настоящий городок</h3>
-                <p class="reasons-description">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
+                <h3 class="reasons-title white">Настоящий<br> городок</h3>
+                <p class="reasons-description">Седона — не аттракцион для<br> туристов, там течёт своя<br> жизнь</p>
               </li>
               <li class="reasons-item reasons-image bg-basic">
                 <img src="images/reason/reason-1.jpg" alt="Настоящий городок" class="reason-img" width="800" height="384">
               </li>
               <li class="reasons-item bg-sec-1">
-                <h3 class="reasons-title">Небольшая площадь</h3>
-                <p class="reasons-description">Все достопримечательности находятся очень близко</p>
+                <h3 class="reasons-title">Небольшая<br> площадь</h3>
+                <p class="reasons-description">Все достопримечательности<br> находятся очень близко</p>
               </li>
               <li class="reasons-item bg-sec-2">
-                <h3 class="reasons-title">Красивая дорога</h3>
-                <p class="reasons-description">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+                <h3 class="reasons-title">Красивая<br> дорога</h3>
+                <p class="reasons-description">Ехать в Седону из Лас-Вегаса<br> совсем не скучно!</p>
               </li>
               <li class="reasons-item bg-sec-1">
-                <h3 class="reasons-title">Мало туристов</h3>
-                <p class="reasons-description">Большинство едет в Гранд Каньон и толпится там</p>
+                <h3 class="reasons-title">Мало<br> туристов</h3>
+                <p class="reasons-description">Большинство едет в Гранд<br> Каньон и толпится там</p>
               </li>
               <li class="reasons-item reasons-image bg-basic">
                 <img src="images/reason/reason-2.jpg" alt="Мост дьявола" class="reason-img" width="800" height="384">
               </li>
               <li class="reasons-item bg-basic">
-                <h3 class="reasons-title white">Там есть мост дьявола</h3>
-                <p class="reasons-description">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
+                <h3 class="reasons-title white">Там есть<br> мост дьявола</h3>
+                <p class="reasons-description">Да, по нему можно пройти!<br> Если вы осмелитесь,<br> разумеется</p>
               </li>
             </ul>
             <ul class="reasons-list">
               <li class="reasons-item bg-sec-1">
                 <img src="images/reason/reason-icon-home.svg" alt="Жильё" class="reason-icon" width="75" height="72">
                 <h3 class="reasons-title">Жильё</h3>
-                <p class="reasons-description">Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
+                <p class="reasons-description">Рекомендуем пожить<br> в настоящем мотеле,<br> всё как в кино!</p>
               </li>
               <li class="reasons-item">
                 <img src="images/reason/reason-icon-food.svg" alt="Еда" class="reason-icon" width="75" height="72">
                 <h3 class="reasons-title">Еда</h3>
-                <p class="reasons-description">Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!</p>
+                <p class="reasons-description">Всегда заказывайте<br> топовый фирменный бургер,<br> вы не разочаруетесь!</p>
               </li>
               <li class="reasons-item bg-sec-1">
                 <img src="images/reason/reason-icon-gift.svg" alt="Сувениры" class="reason-icon" width="75" height="72">
                 <h3 class="reasons-title">Сувениры</h3>
-                <p class="reasons-description">Не только китайского, но и настоящего местного производства!</p>
+                <p class="reasons-description">Не только китайского,<br> но и настоящего местного<br> производства!</p>
               </li>
             </ul>
           </section>
           <section class="interested">
             <h2 class="interested-title">Заинтересовались?</h2>
-            <p>Укажите предполагаемые даты поездки,и мы покажем вам лучшие предложения гостиниц в Седоне</p>
-            <a href="catalog.html" class="button button-big button-search">Поиск гостиницы в Седоне</a>
+            <p class="interested-description">Укажите предполагаемые даты поездки,<br>и мы покажем вам лучшие предложения гостиниц в Седоне</p>
+            <div class="button-container">
+              <a href="catalog.html" class="button button-big button-search">Поиск гостиницы в Седоне</a>
+            </div>
           </section>
           <section class="subscribe">
             <h2 class="subscribe-title">Подпишитесь на рассылку</h2>
-            <p>Только полезная информация и никакого спама, честное бойскаутское!</p>
+            <p class="subscribe-description">Только полезная информация и никакого спама,<br> честное бойскаутское!</p>
             <form class="subscribe-form" action="https://echo.htmlacademy.ru/" method="post">
               <label class="visually-hidden">Email</label>
               <input class="email-field" placeholder="Ваш e-mail" type="email" name="subscribe-email" id="subscribe-email">
