--- a/catalog.html
+++ b/catalog.html
@@ -13,7 +13,7 @@
       <header class="page-header">
         <nav class="navigation">
           <a href="index.html" class="navigation-logo">
-            <img src="images/header/logo-city-sedona.svg" alt="Логотип Седона" class="header-logo-sedona" width="138" height="64">
+            <img src="images/header/logo-city-sedona.svg" alt="Логотип Седона" class="header-logo-sedona" width="140" height="70">
           </a>
           <ul class="navigation-list">
             <li class="navigation-item">
@@ -26,17 +26,17 @@
               <a href="catalog.html" class="navigation-link">Гостиницы</a>
             </li>
           </ul>
-          <ul class="navigation-list navigation-user">
-            <li class="navigation-item">
-              <a href="#" class="navigation-link">
+          <ul class="navigation-list-user">
+            <li class="navigation-item-user">
+              <a href="#" class="navigation-link-user">
                 <span class="visually-hidden">Поиск</span>
                 <svg width="19" height="19" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <path d="m18.5 17-3.7-3.67c1-1.3 1.7-2.98 1.7-4.87A8 8 0 0 0 8.5.5C4.1.5.5 4.18.5 8.56a8 8 0 0 0 12.9 6.26l3.7 3.68 1.4-1.5Zm-10-2.48a6 6 0 0 1-6-5.96 6 6 0 0 1 12 0 6 6 0 0 1-6 5.96Z" fill="#000"/>
                 </svg>
               </a>
             </li>
-            <li class="navigation-item">
-              <a href="#" class="navigation-link">
+            <li class="navigation-item-user">
+              <a href="#" class="navigation-link-user">
                 <span class="visually-hidden">Избранное</span>
                 <svg width="20" height="20" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <path d="M9.9 19a.9.9 0 0 1-.8-.4c-5.4-6.1-6.7-7.5-7-7.9A5.4 5.4 0 0 1 6.5 2C7.8 2 9 2.5 10 3.3a5.46 5.46 0 0 1 9 4.1c0 1.3-.5 2.5-1.3 3.4l-7 7.9c-.2.2-.4.3-.8.3Zm-6-9.5c.3.4 3.5 4 6.1 6.9l6.2-7c.5-.5.7-1.2.7-2 0-1.8-1.5-3.3-3.3-3.3-1 0-2 .5-2.7 1.3-.3.3-.6.4-.9.4-.3 0-.6-.2-.8-.4-.7-.8-1.7-1.3-2.7-1.3-1.8 0-3.3 1.5-3.3 3.3-.1.9.3 1.6.7 2.1-.1 0-.1 0 0 0Z" fill="#000"/>
@@ -44,7 +44,7 @@
                 <span class="header-icon-number">12</span>
               </a>
             </li>
-            <li class="navigation-item">
+            <li class="navigation-item-user">
               <a href="#" class="button button-small button-navigation">Хочу сюда!</a>
             </li>
           </ul>
@@ -60,7 +60,7 @@
                 <li class="breadcrumbs-item">
                   <a href="index.html" class="breadcrumbs-link">
                     <span class="visually-hidden">Главная</span>
-                    <img src="images/icons main/icon-home.svg" alt="Главная" class="breadcrumbs-icon" width="12" height="12">
+                    <img src="images/icons main/icon-home.svg" alt="Главная" class="breadcrumbs-icon" width="13" height="15">
                   </a>
                 </li>
                 <li class="breadcrumbs-item">
@@ -100,7 +100,7 @@
                 </fieldset>
                 <!-- FIELD Тип жилья radio -->
                 <fieldset class="catalog-filter-group">
-                  <legend class="catalog-filter-title">Тип жилья:</legend>
+                  <legend class="catalog-filter-title">Тип Жилья:</legend>
                   <ul class="catalog-filter-list">
                     <li class="catalog-filter-item">
                       <label class="control">
@@ -123,7 +123,7 @@
                   </ul>
                 </fieldset>
                 <!-- FIELD Стоимость scale/range -->
-                <fieldset class="catalog-filter-group">
+                <fieldset class="catalog-filter-price">
                   <legend class="catalog-filter-title">Стоимость, ₽:</legend>
                   <label class="control">
                   <input type="text" placeholder="от" value="0" class="catalog-filter-scale">
@@ -137,8 +137,10 @@
                   <input type="range" min="0" max="10" class="range-filter">
                   </label>
                 </fieldset>
-                <button class="button button-small button-filter" type="submit">Применить</button>
-                <button class="button button-small button-reset" type="reset">Сбросить</button>
+                <div class="filter-buttons">
+                  <button class="button button-small button-filter" type="submit">Применить</button>
+                  <button class="button button-small button-reset" type="reset">Сбросить</button>
+                </div>
               </form>
             </div>
           </div>
@@ -259,9 +261,9 @@
             </ul>
           </section>
 
-          <section class="subscribe-catalog">
-            <h2 class="subscribe-catalog-title">Подпишитесь на рассылку</h2>
-            <p>Только полезная информация и никакого спама, честное бойскаутское!</p>
+          <section class="subscribe subscribe-catalog">
+            <h2 class="subscribe-title">Подпишитесь на рассылку</h2>
+            <p class="subscribe-description">Только полезная информация и никакого спама,<br> честное бойскаутское!</p>
             <form class="subscribe-form" action="https://echo.htmlacademy.ru/" method="post">
               <label class="visually-hidden">Email</label>
               <input class="email-field" placeholder="Ваш e-mail" type="email" name="subscribe-email" id="subscribe-email">
