изменяет li с причинами

--- a/index.html
+++ b/index.html
@@ -62,12 +62,14 @@
               <p class="intro-description">Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
             <h2 class="visually-hidden">Причины</h2>
             <ul class="reasons-list">
-              <li class="reasons-item bg-basic">
-                <h3 class="reasons-title white">Настоящий<br> городок</h3>
-                <p class="reasons-description">Седона — не аттракцион для<br> туристов, там течёт своя<br> жизнь</p>
-              </li>
-              <li class="reasons-item reasons-image bg-basic">
-                <img src="images/reason/reason-1.jpg" alt="Настоящий городок" class="reason-img" width="800" height="384">
+              <li class="reasons-list-row">
+                <div class="reasons-item bg-basic">
+                  <h3 class="reasons-title white">Настоящий<br> городок</h3>
+                  <p class="reasons-description">Седона — не аттракцион для<br> туристов, там течёт своя<br> жизнь</p>
+                </div>
+                <div class="reasons-item reasons-image bg-basic">
+                  <img src="images/reason/reason-1.jpg" alt="Настоящий городок" class="reason-img" width="800" height="384">
+                </div>
               </li>
               <li class="reasons-item bg-sec-1">
                 <h3 class="reasons-title">Небольшая<br> площадь</h3>
@@ -81,12 +83,14 @@
                 <h3 class="reasons-title">Мало<br> туристов</h3>
                 <p class="reasons-description">Большинство едет в Гранд<br> Каньон и толпится там</p>
               </li>
-              <li class="reasons-item reasons-image bg-basic">
-                <img src="images/reason/reason-2.jpg" alt="Мост дьявола" class="reason-img" width="800" height="384">
-              </li>
-              <li class="reasons-item bg-basic">
-                <h3 class="reasons-title white">Там есть<br> мост дьявола</h3>
-                <p class="reasons-description">Да, по нему можно пройти!<br> Если вы осмелитесь,<br> разумеется</p>
+              <li class="reasons-list-row">
+                <div class="reasons-item reasons-image bg-basic">
+                  <img src="images/reason/reason-2.jpg" alt="Мост дьявола" class="reason-img" width="800" height="384">
+                </div>
+                <div class="reasons-item bg-basic">
+                  <h3 class="reasons-title white">Там есть<br> мост дьявола</h3>
+                  <p class="reasons-description">Да, по нему можно пройти!<br> Если вы осмелитесь,<br> разумеется</p>
+                </div>
               </li>
             </ul>
             <ul class="reasons-list">
