добавляет стилизацию кнопок

--- a/catalog.html
+++ b/catalog.html
@@ -45,7 +45,7 @@
               </a>
             </li>
             <li class="navigation-item-user">
-              <a href="#" class="button button-small button-navigation">Хочу сюда!</a>
+              <a href="#" class="button button-navigation">Хочу сюда!</a>
             </li>
           </ul>
         </nav>
@@ -140,8 +140,8 @@
                   </label>
                 </fieldset>
                 <div class="filter-buttons">
-                  <button class="button button-small button-filter" type="submit">Применить</button>
-                  <button class="button button-small button-reset" type="reset">Сбросить</button>
+                  <button class="button button-filter" type="submit">Применить</button>
+                  <button class="button button-reset" type="reset">Сбросить</button>
                 </div>
               </form>
             </div>
@@ -189,8 +189,8 @@
                   </a>
                   <span class="hotels-card-group">Гостиница</span>
                   <span class="hotels-card-price">От 4000 ₽</span>
-                  <a href="#" class="button button-small hotels-card-button button-more">подробнее</a>
-                  <button class="button button-small hotels-card-button button-favorite">в избранное</button>
+                  <a href="#" class="button hotels-card-button button-more">подробнее</a>
+                  <button class="button hotels-card-button button-favorite">в избранное</button>
                   <div>
                     <img src="images/hotels-raiting/star-4.svg" alt="Кол-во звезд у гостиницы 4." class="hotels-card-stars" width="140" height="37">
                   </div>
@@ -205,8 +205,8 @@
                   </a>
                   <span class="hotels-card-group">Гостиница</span>
                   <span class="hotels-card-price">От 5000 ₽</span>
-                  <a href="#" class="button button-small hotels-card-button button-more">подробнее</a>
-                  <button class="button button-small hotels-card-button button-favorite button-favorite-active">в избранном</button>
+                  <a href="#" class="button hotels-card-button button-more">подробнее</a>
+                  <button class="button hotels-card-button button-favorite button-favorite-active">в избранном</button>
                   <div>
                     <img src="images/hotels-raiting/star-4.svg" alt="Кол-во звезд у гостиницы 4." class="hotels-card-stars" width="140" height="37">
                   </div>
@@ -221,8 +221,8 @@
                   </a>
                   <span class="hotels-card-group">Гостиница</span>
                   <span class="hotels-card-price">От 2500 ₽</span>
-                  <a href="#" class="button button-small hotels-card-button button-more">подробнее</a>
-                  <button class="button button-small hotels-card-button button-favorite">в избранное</button>
+                  <a href="#" class="button hotels-card-button button-more">подробнее</a>
+                  <button class="button hotels-card-button button-favorite">в избранное</button>
                   <div>
                     <img src="images/hotels-raiting/star-3.svg" alt="Кол-во звезд у гостиницы 3." class="hotels-card-stars" width="140" height="37">
                   </div>
@@ -237,8 +237,8 @@
                   </a>
                   <span class="hotels-card-group">Гостиница</span>
                   <span class="hotels-card-price">От 1500 ₽</span>
-                  <a href="#" class="button button-small hotels-card-button button-more">подробнее</a>
-                  <button class="button button-small hotels-card-button button-favorite">в избранное</button>
+                  <a href="#" class="button hotels-card-button button-more">подробнее</a>
+                  <button class="button hotels-card-button button-favorite">в избранное</button>
                   <div>
                     <img src="images/hotels-raiting/star-2.svg" alt="Кол-во звезд у гостиницы 2." class="hotels-card-stars" width="140" height="37">
                   </div>
