--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
               </a>
             </li>
             <li class="navigation-item-user">
-              <a href="#" class="button button-small button-navigation">Хочу сюда!</a>
+              <a href="#" class="button button-navigation">Хочу сюда!</a>
             </li>
           </ul>
         </nav>
